Se conecto la API de usuario con el registro

--- a/frontend/views/paginas/inicio/registro.hbs
+++ b/frontend/views/paginas/inicio/registro.hbs
@@ -2,17 +2,26 @@
 <center><b><p style="font-size:50px ;">Creación de registro</p> </b></center>
 <br>
 <div class="row justify-content-md-center">
-    <form action="/login" method="post">
 
+    <div>
+        {{#if message}}
+            <div class="alert {{messageClass}}">
+                {{message}}
+            </div>
+        {{/if}}
+    </div>
+
+    <form method="POST">
+        
         <div class="container">
             <div class="input-group mb-3">
                 <span class="input-group-text" >Nombre completo: </span>
-                <input type="text" name="nombre" class="form-control" placeholder="Escribe aqui tu nombre completo" aria-label="nombre" aria-describedby="basic-addon1" value="" required>
+                <input type="text" name="name" class="form-control" placeholder="Escribe aqui tu nombre completo" aria-label="nombre" aria-describedby="basic-addon1" value="" required>
             </div>
 
             <div class="input-group mb-3">
                 <span class="input-group-text" >Apodo: </span>
-                <input type="text" name="apodo" class="form-control" placeholder="Escribe aqui tu apodo" aria-label="apodo" aria-describedby="basic-addon1" value="" required>
+                <input type="text" name="nickname" class="form-control" placeholder="Escribe aqui tu apodo" aria-label="apodo" aria-describedby="basic-addon1" value="" required>
             </div>
 
             <div class="input-group mb-3">
@@ -22,12 +31,12 @@
 
             <div class="input-group mb-3">
                 <span class="input-group-text">Contraseña: </span>
-                <input type="password" name="contraseña" class="form-control" placeholder="Escribe una contraseña de acceso" aria-label="contraseña" aria-describedby="basic-addon1" value="" required>
+                <input type="password" name="password" class="form-control" placeholder="Escribe una contraseña de acceso" aria-label="contraseña" aria-describedby="basic-addon1" value="" required>
             </div>
             
             <div class="input-group mb-3">
                 <span class="input-group-text">Confirmar contraseña: </span>
-                <input type="password" name="ccontraseña" class="form-control" placeholder="Vuelve a escribir la contraseña para confirmarla." aria-label="ccontraseña" aria-describedby="basic-addon1" value="" required>
+                <input type="password" name="repassword" class="form-control" placeholder="Vuelve a escribir la contraseña para confirmarla." aria-label="ccontraseña" aria-describedby="basic-addon1" value="" required>
             </div>
 
 
