conneccion con el juego

--- a/frontend/views/paginas/inicio/login.hbs
+++ b/frontend/views/paginas/inicio/login.hbs
@@ -15,5 +15,7 @@
         <center><button type="submit" class="btn btn-success">ACEDER</button></center>
 
     </form> --}}
+    <iframe src="http://localhost:3500/" frameborder="0" width="640" height="480"></iframe>
+
 </div>
 
