--- a/frontend/views/home.hbs
+++ b/frontend/views/home.hbs
@@ -2,6 +2,7 @@
 {{> encabezado}}
 <br>
 <h1>Listo, comienza tu partida...!!!</h1>
+<iframe src="http://localhost:3500/" frameborder="0" width="640" height="480"></iframe>
 
 <div style="height:75%;">
     <br>
