solucion de bugs de imagen

--- a/frontend/views/index.hbs
+++ b/frontend/views/index.hbs
@@ -6,7 +6,7 @@
   <a href="/registro" class="btn btn-primary">CREAR REGISTRO</a>
 </div>
 
-<center><img src="../public/images/imagen_principal.jpg" width="75%" height="500px" ></center>
+<center><img src="https://img.itch.zone/aW1hZ2UvMTU2OTczMS85MTY1NTk2LnBuZw==/original/YjjtaV.png" width="75%" height="500px" ></center>
 {{!-- <img style=' width:280px;height:200px;' src='imagen_principal.jpg'> --}}
 
 
